--- a/src/html/part/js.html
+++ b/src/html/part/js.html
@@ -6,4 +6,5 @@
   <script src="../js/vendor/jquery.easing/js/jquery.easing.js"></script>
   <script src="../js/vendor/animo.js/animo.js"></script>
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
+  <script src="../vendor/sweetalert/dist/sweetalert.min.js"></script>
   <script src="../js/app.js"></script>
