--- a/src/html/studentmanagement_list.html
+++ b/src/html/studentmanagement_list.html
@@ -13,12 +13,12 @@
   <link rel="stylesheet" href="../js/vendor/animate.css/animate.min.css">
   <link rel="stylesheet" href="../js/vendor/whirl/dist/whirl.css">
   <link rel="stylesheet" href="../css/bootstrap.css" id="bscss">
+  <link rel="stylesheet" href="../vendor/datatable-bootstrap/css/dataTables.bootstrap.css">
+  <link rel="stylesheet" href="../vendor/sweetalert/dist/sweetalert.css">
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
-  <link rel="stylesheet" href="../vendor/datatable-bootstrap/css/dataTables.bootstrap.css">
-  <!-- SWEET ALERT-->
-  <link rel="stylesheet" href="../vendor/sweetalert/dist/sweetalert.css">
+  
 
 
 </head>
@@ -51,7 +51,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span><i class="fa fa-user"></i>admin</span><span>|</span>
+              <span>
+                <i class="fa fa-user"></i>admin</span>
+              <span>|</span>
             </li>
             <li>
               <a href="#">
@@ -184,7 +186,8 @@
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          学生列表 <span class="text-sm hidden-xs">所在学校编号：A00001 学生注册时请指导学生在完善信息页填写学校编码，填写编码的学生将直接分配给校区，不填写将无法直接操作该学生</span>
+          学生列表
+          <span class="text-sm hidden-xs">所在学校编号：A00001 学生注册时请指导学生在完善信息页填写学校编码，填写编码的学生将直接分配给校区，不填写将无法直接操作该学生</span>
         </div>
         <div class="row">
           <div class="col-xs-12">
@@ -223,10 +226,10 @@
                       <tr>
                         <th data-check-all="">
                           <div data-toggle="tooltip" data-title="全选" class="checkbox c-checkbox" data-original-title="" title="">
-                              <label>
-                                <input type="checkbox">
-                                <span class="fa fa-check"></span>
-                              </label>
+                            <label>
+                              <input type="checkbox">
+                              <span class="fa fa-check"></span>
+                            </label>
                           </div>
                         </th>
                         <th>学生手机</th>
@@ -244,13 +247,13 @@
                     <tbody id="designerlist">
                       <tr>
                         <td>
-                            <div class="checkbox c-checkbox">
-                              <label>
-                                <input type="checkbox">
-                                <span class="fa fa-check"></span>
-                              </label>
-                            </div>
-                          </td>
+                          <div class="checkbox c-checkbox">
+                            <label>
+                              <input type="checkbox">
+                              <span class="fa fa-check"></span>
+                            </label>
+                          </div>
+                        </td>
                         <td class="text-warning">18000000000</td>
                         <td>名字名字</td>
                         <td>昵称昵称</td>
@@ -261,20 +264,20 @@
                         <td>500</td>
                         <td>七年级</td>
                         <td>
-                          <a class="btn btn-primary" id="swal-demo4" href="javascript:;">修改资料</a>
+                          <a class="btn btn-primary jq-edit" href="javascript:;">修改资料</a>
                           <a class="btn btn-primary" href="">改绑手机</a>
                           <a class="btn btn-primary" href="">重置密码</a>
                         </td>
                       </tr>
                       <tr>
                         <td>
-                            <div class="checkbox c-checkbox">
-                              <label>
-                                <input type="checkbox">
-                                <span class="fa fa-check"></span>
-                              </label>
-                            </div>
-                          </td>
+                          <div class="checkbox c-checkbox">
+                            <label>
+                              <input type="checkbox">
+                              <span class="fa fa-check"></span>
+                            </label>
+                          </div>
+                        </td>
                         <td>18000000000</td>
                         <td>名字名字</td>
                         <td>昵称昵称</td>
@@ -285,7 +288,7 @@
                         <td>500</td>
                         <td>七年级</td>
                         <td>
-                          <a class="btn btn-primary" href="">修改资料</a>
+                          <a class="btn btn-primary jq-edit" href="javascript:;">修改资料</a>
                           <a class="btn btn-primary" href="">改绑手机</a>
                           <a class="btn btn-primary" href="">重置密码</a>
                         </td>
@@ -309,7 +312,7 @@
                         <td>500</td>
                         <td>七年级</td>
                         <td>
-                          <a class="btn btn-primary" href="">修改资料</a>
+                          <a class="btn btn-primary jq-edit" href="javascript:;">修改资料</a>
                           <a class="btn btn-primary" href="">改绑手机</a>
                           <a class="btn btn-primary" href="">重置密码</a>
                         </td>
@@ -345,7 +348,7 @@
                       </li>
                     </ul>
                   </div>
-                </div>  
+                </div>
                 <!-- endbuild -->
 
 
@@ -359,7 +362,7 @@
       </div>
     </section>
     <!-- 主要内容END -->
-    
+
     <!-- build:foot -->
     <footer>
       <span>&copy; 2018 - 智厢逢</span>
@@ -370,8 +373,6 @@
 
   </div>
 
-  <!-- SWEET ALERT-->
-  <script src="../vendor/sweetalert/dist/sweetalert.min.js"></script>
   <!-- build:js -->
   <!-- =============== JS ===============-->
   <script src="../js/vendor/modernizr/modernizr.custom.js"></script>
@@ -381,9 +382,10 @@
   <script src="../js/vendor/jquery.easing/js/jquery.easing.js"></script>
   <script src="../js/vendor/animo.js/animo.js"></script>
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
+  <script src="../vendor/sweetalert/dist/sweetalert.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
-  
+  <script src="../js/studentmanagement.js"></script>
 
 
 </body>
