--- a/src/html/studentmanagement_list.html
+++ b/src/html/studentmanagement_list.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
+  <link rel="stylesheet" href="../css/wj.css">
   
 
 
@@ -51,9 +52,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span>
-                <i class="fa fa-user"></i>admin</span>
-              <span>|</span>
+              <span><i class="fa fa-user"></i>admin</span><span>|</span>
             </li>
             <li>
               <a href="#">
@@ -65,6 +64,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -182,6 +182,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -221,13 +222,13 @@
               <!-- START table-responsive-->
               <div class="panel-heading">
                 <div class="table-responsive">
-                  <table id="" class="table table-bordered table-hover dataTable">
+                  <table id="table-ext-1" class="table table-bordered table-hover dataTable">
                     <thead>
                       <tr>
-                        <th data-check-all="">
-                          <div data-toggle="tooltip" data-title="全选" class="checkbox c-checkbox" data-original-title="" title="">
+                        <th data-check-all>
+                          <div data-toggle="tooltip" data-title="全选" class="checkbox c-checkbox">
                             <label>
-                              <input type="checkbox">
+                              <input class="jq-allcheck" type="checkbox">
                               <span class="fa fa-check"></span>
                             </label>
                           </div>
@@ -265,8 +266,8 @@
                         <td>七年级</td>
                         <td>
                           <a class="btn btn-primary jq-edit" href="javascript:;">修改资料</a>
-                          <a class="btn btn-primary" href="">改绑手机</a>
-                          <a class="btn btn-primary" href="">重置密码</a>
+                          <a class="btn btn-primary jq-phone" href="javascript:;">改绑手机</a>
+                          <a class="btn btn-primary jq-pswd" href="javascript:;">重置密码</a>
                         </td>
                       </tr>
                       <tr>
@@ -289,8 +290,8 @@
                         <td>七年级</td>
                         <td>
                           <a class="btn btn-primary jq-edit" href="javascript:;">修改资料</a>
-                          <a class="btn btn-primary" href="">改绑手机</a>
-                          <a class="btn btn-primary" href="">重置密码</a>
+                          <a class="btn btn-primary jq-phone" href="javascript:;">改绑手机</a>
+                          <a class="btn btn-primary jq-pswd" href="javascript:;">重置密码</a>
                         </td>
                       </tr>
                       <tr>
@@ -313,13 +314,13 @@
                         <td>七年级</td>
                         <td>
                           <a class="btn btn-primary jq-edit" href="javascript:;">修改资料</a>
-                          <a class="btn btn-primary" href="">改绑手机</a>
-                          <a class="btn btn-primary" href="">重置密码</a>
+                          <a class="btn btn-primary jq-phone" href="javascript:;">改绑手机</a>
+                          <a class="btn btn-primary jq-pswd" href="javascript:;">重置密码</a>
                         </td>
                       </tr>
                     </tbody>
                   </table>
-                  <a class="btn btn-primary" href="">调换班级</a>
+                  <a class="btn btn-primary jq-changeclass" href="javascript:;">调换班级</a>
                 </div>
 
                 <!-- build:pages -->
@@ -348,8 +349,9 @@
                       </li>
                     </ul>
                   </div>
-                </div>
+                </div>  
                 <!-- endbuild -->
+
 
 
 
@@ -371,6 +373,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -385,6 +388,8 @@
   <script src="../vendor/sweetalert/dist/sweetalert.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+  <script src="../../js/vendor/moment/min/moment-with-locales.min.js"></script>
+  <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/studentmanagement.js"></script>
 
 
