--- a/src/html/studyreport_all_info.html
+++ b/src/html/studyreport_all_info.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="../js/vendor/animate.css/animate.min.css">
   <link rel="stylesheet" href="../js/vendor/whirl/dist/whirl.css">
   <link rel="stylesheet" href="../css/bootstrap.css" id="bscss">
+  <link rel="stylesheet" href="../vendor/datatable-bootstrap/css/dataTables.bootstrap.css">
+  <link rel="stylesheet" href="../vendor/sweetalert/dist/sweetalert.css">
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
@@ -231,6 +233,7 @@
   <script src="../js/vendor/jquery.easing/js/jquery.easing.js"></script>
   <script src="../js/vendor/animo.js/animo.js"></script>
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
+  <script src="../vendor/sweetalert/dist/sweetalert.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
 
