--- a/src/html/17_study_word_2.html
+++ b/src/html/17_study_word_2.html
@@ -131,28 +131,37 @@
       <div class="xc-banner-items-box">
         <div class="xc-banner-items">
           <div class="xc-banner-item active">
-            <img class="xc-banner-img" src="../img/13_words_1.png" alt="教程">
+            <img class="xc-banner-img" src="../img/17_words_1.png" alt="教程">
           </div>
           <div class="xc-banner-item">
-            <img class="xc-banner-img" src="../img/13_words_2.png" alt="教程">
+            <img class="xc-banner-img" src="../img/17_words_2.png" alt="教程">
           </div>
           <div class="xc-banner-item">
-            <img class="xc-banner-img" src="../img/13_words_3.png" alt="教程">
+            <img class="xc-banner-img" src="../img/17_words_3.png" alt="教程">
           </div>
           <div class="xc-banner-item">
-            <img class="xc-banner-img" src="../img/13_words_4.png" alt="教程">
+            <img class="xc-banner-img" src="../img/17_words_4.png" alt="教程">
           </div>
           <div class="xc-banner-item">
-            <img class="xc-banner-img" src="../img/13_words_5.png" alt="教程">
+            <img class="xc-banner-img" src="../img/17_words_5.png" alt="教程">
           </div>
           <div class="xc-banner-item">
-            <img class="xc-banner-img" src="../img/13_words_6.png" alt="教程">
+            <img class="xc-banner-img" src="../img/17_words_6.png" alt="教程">
+          </div>
+          <div class="xc-banner-item">
+            <img class="xc-banner-img" src="../img/17_words_7.png" alt="教程">
+          </div>
+          <div class="xc-banner-item">
+            <img class="xc-banner-img" src="../img/17_words_8.png" alt="教程">
+          </div>
+          <div class="xc-banner-item">
+            <img class="xc-banner-img" src="../img/17_words_9.png" alt="教程">
           </div>
         </div>
       </div>
       <div class="xc-banner-btns">
         <span class="active">1</span>/
-        <span>6</span>
+        <span>9</span>
         <span class="xc-banner-btn xc-banner-prv"></span>
         <span class="xc-banner-btn xc-banner-next"></span>
       </div>
@@ -175,7 +184,7 @@
   </div>
   <!-- endbuild -->
 
-  <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>  
   <script src="../js/main_xc.js"></script>
 </body>
 
