--- a/src/html/coursemanagement_mode.html
+++ b/src/html/coursemanagement_mode.html
@@ -21,13 +21,14 @@
   <!-- endbuild -->
 
 
+
   <link rel="stylesheet" href="../css/wj.css">
 
 
 
 </head>
 
-<body>
+<body class="mode-body">
   <div class="wrapper">
     <!-- build:head -->
     <header class="topnavbar-wrapper">
@@ -67,6 +68,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -187,6 +189,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -443,6 +446,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -456,6 +460,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -481,6 +486,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
